Fixed the title overlapping issue

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -10,7 +10,7 @@
     margin-top: 2rem;
 }
 
-.title{
+.chat-title{
     display: inline-flex;
     margin-top: 2rem;
     margin-bottom: 1.5rem;
